# simplismart-backend-assesment

./: README.md  pyproject.toml  replit_zip_error_log.txt  requirements.txt
app/: __init__.py  main.py  requirements.txt
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  clusters.py  deployments.py  organizations.py
app/core/: config.py  deps.py  security.py
app/db/: base.py  base_class.py  session.py
app/models/: cluster.py  deployment.py  organization.py  user.py
app/schemas/: cluster.py  deployment.py  organization.py  user.py
tests/: __init__.py  conftest.py
