[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "pytest>=8.3.4",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.19",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "itsdangerous",
    "starlette>=0.41.3",
]
